[package]
name = "termize"
version = "0.1.0"
authors = ["Kevin K. <kbknapp@gmail.com>", "Benjamin Sago <ogham@bsago.me>", "Yuki Okushi <huyuumi.dev@gmail.com>"]
exclude = []
description = "functions for determining terminal sizes and dimensions"
repository = "https://github.com/JohnTitor/termize.git"
documentation = "https://docs.rs/termize/"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["term", "terminal", "size", "width", "dimension"]
categories = ["command-line-interface"]

[badges]
travis-ci = {repository = "JohnTitor/termize"}

[dependencies]

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2.20"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincon", "processenv", "winbase"] }

[features]
default     = []
nightly     = [] # for building with nightly and unstable features
unstable    = [] # for building with unstable features on stable Rust
debug       = [] # for building with debug messages

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
# codegen-units ignored with lto=true

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 2

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false

[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4
