[package]
name = "termize"
version = "0.1.0"
authors = ["Yuki Okushi <huyuumi.dev@gmail.com>"]
edition = "2018"
exclude = [".github/*", ".travis.yml"]
description = "functions for determining terminal sizes and dimensions"
repository = "https://github.com/JohnTitor/termize.git"
documentation = "https://docs.rs/termize/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["term", "terminal", "size", "width", "dimension"]
categories = ["command-line-interface"]

[badge]
cirrus-ci = { repository = "https://github.com/JohnTitor/termize" }

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2.66"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["handleapi", "processenv", "wincon", "winbase"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
# codegen-units ignored with lto=true

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 2
