[package]
name = "termize"
version = "0.1.1"
edition = "2018"
exclude = [".github/*"]
description = "functions for determining terminal sizes and dimensions"
repository = "https://github.com/JohnTitor/termize"
documentation = "https://docs.rs/termize"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["term", "terminal", "size", "width", "dimension"]
categories = ["command-line-interface"]

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2.66"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Console"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
# codegen-units ignored with lto=true

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 2
